src/objects/Compet_Old__c.object
<CustomObject>
    <description>Previous Competitive App - Retired</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000000rC3hEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claims_System_Name__c</fullName>
        <description>This is a test.  Changing a 255 character field into longer text.</description>
        <inlineHelpText>This is help box text.  This is only a test.</inlineHelpText>
        <label>Claims System Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clients__c</fullName>
        <label>Clients</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competition_Tier__c</fullName>
        <label>Claims Competition Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Former_Clients__c</fullName>
        <label>Former Clients</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guidewire_Advantage__c</fullName>
        <label>Guidewire Advantage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Losses__c</fullName>
        <label>Losses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Focus__c</fullName>
        <label>Market Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Large Insurers (Personal Lines)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Insurers (Commercial Lines)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Insurers (WC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsize Insurers (Personal Lines)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsize Insurers (Commercial Lines)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsize Insurers (WC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Insurers (Personal Lines)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Insurers (Commercial Lines)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Insurers (WC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-insureds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPAs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Approach__c</fullName>
        <label>Marketing_Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <description>List of partners</description>
        <label>Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Competition_Tier__c</fullName>
        <label>Policy Competition Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_System_Name__c</fullName>
        <label>Policy System Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>Policy System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial/Billing System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check-writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Bill Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rich_text_field_test__c</fullName>
        <label>Rich text field test</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wins__c</fullName>
        <label>Wins</label>
        <type>TextArea</type>
    </fields>
    <label>Compet-Old</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compet-Old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>